[gd_scene load_steps=4 format=3 uid="uid://cccfn7scn3fwg"]

[ext_resource type="Theme" uid="uid://duf2gciy0wwfv" path="res://Resources/UiTheme.tres" id="1_pujtc"]
[ext_resource type="Script" path="res://Scripts/Scenes/Hint.gd" id="1_yhy8l"]
[ext_resource type="PackedScene" uid="uid://nc8wmma4t2fh" path="res://Scenes/Arrow.tscn" id="2_ckqsi"]

[node name="Hint" type="Node2D"]
position = Vector2(200, 100)
script = ExtResource("1_yhy8l")
HintText = "This is a hint"
ArrowTargets = PackedVector2Array(500, 500)
ArrowScene = ExtResource("2_ckqsi")

[node name="ArrowsHolder" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="HintDescription" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -80.0
offset_right = 183.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pujtc")

[node name="VBoxContainer" type="VBoxContainer" parent="HintDescription"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HintDescription/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HintDescription/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("1_pujtc")
theme_override_font_sizes/font_size = 36
text = "Hint text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HintDescription/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HintDescription/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="DisableHintsButton" type="Button" parent="HintDescription/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
focus_mode = 0
theme = ExtResource("1_pujtc")
text = "Disable hints"
flat = true

[node name="OkButton" type="Button" parent="HintDescription/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
theme = ExtResource("1_pujtc")
text = "Ok"
flat = true

[connection signal="pressed" from="HintDescription/VBoxContainer/MarginContainer2/HBoxContainer/DisableHintsButton" to="." method="_on_hints_disabled"]
[connection signal="pressed" from="HintDescription/VBoxContainer/MarginContainer2/HBoxContainer/OkButton" to="." method="_on_hint_closed"]
